I need to learn english

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset='utf-8'>    
-    <title>Mod.IO Subscribe from friend ❤️</title>
+    <title>Mod.Io Subscribe from friend ❤️</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>    
    <script src='getMods.js'></script>
 </head>
 <body>
     <li>
     <h1>Mod.IO Subscriber</h1>
-    <p>This simple html javascript page subsribes every mod from Mod.IO your friend has</p>
+    <p>This simple html javascript page subscribes every mod from Mod.Io your friend has</p>
     <p>You both need to have a working Oauth token</p>
     <p>😐Do not share your token anyone you can't trust! 😐</p>
 
