--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <input id="gameId" type="text" placeholder="Your game id here" /> 
     </li>
 
-    <button onclick="subscibeToFriendsMods()">Click here to subscribe!</button>
+    <button onclick="subscribeToFriendsMods()">Click here to subscribe!</button>
 </body>
 </html>
