Add stylesheet config

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset='utf-8'>    
     <title>Mod.Io Subscribe from friend ❤️</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>    
-   <script src='getMods.js'></script>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' href='style.css'>
+    <script src='getMods.js'></script>
 </head>
 <body>
     <li>
