--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>    
     <title>Mod.Io Subscribe from friend ❤️</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='styles.css'>
     <script src='getMods.js'></script>
 </head>
 <body>
