feat: Add status span

--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <input id="gameId" type="text" placeholder="Your game id here" />
 
     <button onclick="subscribeToFriendsMods()">Click here to subscribe!</button>
+
+    <span id='status'></span>
 </body>
 </html>
